--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portifolio</title>
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
 </head>
 
 <body>
     <header></header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível <span>com um Front-end de qualidade!</span></h1>
-        <p>Olá! Sou Fabrício Magoga, desenvolvedor Full-Stack com especialidade em React, HTML e CSS. Ajudo negócios e
-            designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <a href="https://www.linkedin.com/in/fabriciomagoga">Linkedin</a>
-        <a href="https://github.com/magoga-br">GitHub</a>
-        <img src="img.jpg" alt="Foto do desenvolvedor Full-Stack Fabrício Magoga">
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong
+                    class="titulo-destaque">com um Front-end de qualidade!
+                </strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Fabrício Magoga, desenvolvedor
+                Full-stack com especialidade em JavaScript, HTML e
+                CSS. Ajudo negócios e designers a
+                colocarem em prática boas ideias. Vamos
+                conversar?</p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://linkedin.com/in/fabriciomagoga">Linkedin</a>
+                <a class="apresentacao__links__link" href="https://github.com/magoga-br">GitHub</a>
+            </div>
+        </section>
+        <img src="img.jpg" alt="Foto de Fabrício	Magoga">
     </main>
     <footer></footer>
 </body>
