--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__links" href="index.html">Home</a>
+            <a class="cabecalho__menu__links" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__links" href="curriculo.html">Currículo</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong
@@ -22,13 +28,22 @@
                 colocarem em prática boas ideias. Vamos
                 conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://linkedin.com/in/fabriciomagoga">Linkedin</a>
-                <a class="apresentacao__links__link" href="https://github.com/magoga-br">GitHub</a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fabriciomagoga" target="_blank">
+                    <img src="./assets/linkedin.png" alt="">
+                    Linkedin
+                </a>
+                <a class="apresentacao__links__navegacao" href="https://github.com/magoga-br" target="_blank">
+                    <img src="./assets/github.png" alt="">
+                    GitHub
+                </a>
             </div>
         </section>
-        <img src="img.jpg" alt="Foto de Fabrício	Magoga">
+        <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Fabrício Magoga</p>
+    </footer>
 </body>
 
 </html>
