adicionando certificado ao curriculo

--- a/curriculo.html
+++ b/curriculo.html
@@ -95,6 +95,11 @@
                             href="https://cursos.alura.com.br/certificate/48849e42-c49f-4f60-bf91-d0363548dd93?lang">com
                             certificado</a> </li>
                     <br>
+                    <li>
+                        HTML e CSS: cabeçalho, footer e variáveis CSS - Alura Cursos <a
+                            href="https://cursos.alura.com.br/certificate/78ac02ba-04e5-47fd-8745-a4a22ed8a6cc?lang">com
+                            certificado</a> </li>
+                    <br>
                     <li>HTML e CSS: Classes, posicionamento e Flexbox - Alura Cursos <a
                             href="https://cursos.alura.com.br/certificate/b18c97db-6b21-4276-8c50-f65e29c27e7a?lang">com
                             certificado</a> </li>
