adicionando outro certificado e melhorando a responsividade

--- a/curriculo.html
+++ b/curriculo.html
@@ -100,6 +100,11 @@
                             href="https://cursos.alura.com.br/certificate/78ac02ba-04e5-47fd-8745-a4a22ed8a6cc?lang">com
                             certificado</a> </li>
                     <br>
+                    <li>
+                        HTML e CSS: trabalhando com responsividade e publicação de projetos <a
+                            href="https://cursos.alura.com.br/certificate/eba92900-b9d6-4275-8c71-9369b9757003?lang">com
+                            certificado</a> </li>
+                    <br>
                     <li>HTML e CSS: Classes, posicionamento e Flexbox - Alura Cursos <a
                             href="https://cursos.alura.com.br/certificate/b18c97db-6b21-4276-8c50-f65e29c27e7a?lang">com
                             certificado</a> </li>
