simplificação dos certificados

--- a/about.html
+++ b/about.html
@@ -25,12 +25,11 @@
             </p>
             <p class="apresentacao__conteudo__texto">
                 Iniciei meus estudos em programação com o ensino médio integrado ao técnico em informática e,
-                atualmente, estou estudando Engenharia de Software na FIAP, além de fazer cursos complementares na Alura
-                e no Senai para um maior aprendizado na área e fora dela.
+                atualmente, estou estudando Engenharia de Software na FIAP, além de fazer cursos complementares para um maior aprendizado na área e fora dela.
             </p>
             <p class="apresentacao__conteudo__texto">
                 Sou uma pessoa que ama oque faz e ama aprender cada vez mais sobre tecnologia, então se tem algo que eu
-                não sei fazer eu busco aprender o quanto antes para que eu possa fazer.
+                não sei, eu busco aprender.
             </p>
         </section>
         <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga">
