--- a/curriculo.html
+++ b/curriculo.html
@@ -14,7 +14,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__links" href="index.html">Home</a>
             <a class="cabecalho__menu__links" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__links" href="curriculo.html">Curriculo</a>
+            <a class="cabecalho__menu__links" href="curriculo.html">Currículo</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -45,9 +45,7 @@
                 <hr>
                 <h2 class="apresentacao__conteudo__titulo">Certificados</h2>
                 <ul class="apresentacao__conteudo__texto">
-                    <br>
-                    <h3>+ 40 horas</h3>
-                    <br>
+
                     <li>Formação A partir do zero: iniciante em programação - Alura Cursos <a
                             href="https://cursos.alura.com.br/degree/certificate/d4b92500-603f-4540-a0d0-c1a5ca9cf23f?lang">com
                             certificado</a> </li>
@@ -57,21 +55,9 @@
                             href="https://on.fiap.com.br/local/nanocourses/gerar_certificado.php?chave=8fb5e9abf37682221f4908d57e1a9c3f&action=view">com
                             certificado</a> </li>
                     <br>
-                    <br>
-                    <h3>até 40 horas</h3>
-                    <br>
                     <li>Matemática - Nivelamento FIAP <a
                             href="https://on.fiap.com.br/pluginfile.php/1/local_nivelamento/certificado_nivelamento/1972/7a33ac8f85f52e74ede343240d882865/certificado.png">com
                             certificado</a> </li>
-                    <br>
-                    <li>Lógica de programação: mergulhe em programação com JavaScript- Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/dabc0f47-7de8-448f-a25e-4ddcce35c497?lang">com
-                            certificado</a></li>
-                    <br>
-                    <li>
-                        Lógica de programação: explore funções e listas - Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/54473ecf-2eb3-40e4-a8ec-07acebc148c3?lang">com
-                            certificado</a></li>
                     <br>
                     <li>Lógica de programação - Nivelamento FIAP <a
                             href="https://on.fiap.com.br/pluginfile.php/1/local_nivelamento/certificado_nivelamento/1978/bf2de083d17de4fc9cb90afda56f282b/certificado.png">com
@@ -81,34 +67,7 @@
                             href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">com
                             certificado</a> </li>
                     <br>
-                    <li>
-                        Lógica de programação: praticando com desafios - Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/58f25efb-159b-4edc-b10e-199aab442a53?lang">com
-                            certificado</a> </li>
-                    <br>
-                    <li>
-                        JavaScript​: utilizando tipos, variáveis e funções - Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/de5c18e8-d86c-44a6-8925-432a49fcc4b9?lang">com
-                            certificado</a> </li>
-                    <br>
-                    <li>HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags - Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/48849e42-c49f-4f60-bf91-d0363548dd93?lang">com
-                            certificado</a> </li>
-                    <br>
-                    <li>
-                        HTML e CSS: cabeçalho, footer e variáveis CSS - Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/78ac02ba-04e5-47fd-8745-a4a22ed8a6cc?lang">com
-                            certificado</a> </li>
-                    <br>
-                    <li>
-                        HTML e CSS: trabalhando com responsividade e publicação de projetos <a
-                            href="https://cursos.alura.com.br/certificate/eba92900-b9d6-4275-8c71-9369b9757003?lang">com
-                            certificado</a> </li>
-                    <br>
-                    <li>HTML e CSS: Classes, posicionamento e Flexbox - Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/b18c97db-6b21-4276-8c50-f65e29c27e7a?lang">com
-                            certificado</a> </li>
-                    <br>
+                    
                     <li>Comunicação - Nivelamento FIAP <a
                             href="https://on.fiap.com.br/local/nivelamento/gerar_certificado.php?chave=35a79a49adbf428b1d34ed19b27b1c6c&action=view">com
                             certificado</a> </li>
