alteração de cor, ajuste do box sizing

--- a/curriculo.html
+++ b/curriculo.html
@@ -43,7 +43,7 @@
                 </ul>
 
                 <hr>
-                <h2 class="apresentacao__conteudo__titulo">Certificados</h2>
+                <h2 class="apresentacao__conteudo__titulo">Certificados relevantes</h2>
                 <ul class="apresentacao__conteudo__texto">
 
                     <li>Formação A partir do zero: iniciante em programação - Alura Cursos <a
@@ -78,7 +78,7 @@
                 <ul class="apresentacao__conteudo__texto">
                     <li>Português Nativo</li>
                     <br>
-                    <li>Inglês Intermediário</li>
+                    <li>Inglês Avançado</li>
                     <br>
                     <li>Espanhol Intermediário</li>
                 </ul>
