--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Sobre mim</title>
 </head>
@@ -28,9 +31,7 @@
                 atualmente, estou estudando Engenharia de Software na FIAP, além de fazer cursos complementares para um maior aprendizado na área e fora dela.
             </p>
             <p class="apresentacao__conteudo__texto">
-                Sou uma pessoa que ama oque faz e ama aprender cada vez mais sobre tecnologia, então se tem algo que eu
-                não sei, eu busco aprender.
-            </p>
+                Sou uma pessoa que ama o que faz e ama aprender cada vez mais sobre tecnologia.
         </section>
         <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga">
     </main>
