--- a/curriculo.html
+++ b/curriculo.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Curriculo</title>
 </head>
@@ -19,18 +24,28 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Currículo</h1>
+            <img class="apresentacao__conteudo__titulo"
+                src="https://readme-typing-svg.demolab.com?font=Monocraft&pause=2000&color=F0F6FC&width=150&height=40&lines=Currículo"
+                alt="Typing SVG" /></a>
+            </div>
+            <hr>
             <div class="informacoes">
 
                 <p class="apresentacao__conteudo__texto">
-                    Olá, meu nome é Fabrício Alves Magoga, sou um apaixonado por tecnologia.
-                </p>
-                <hr>
+                    Olá, meu nome é Fabrício Alves Magoga, sou Full-stack Developer. Atualmente estou estudando
+                    Engenharia de Software na FIAP. Sou uma pessoa que ama o que faz e ama aprender cada vez mais sobre
+                    tecnologia.
+                    <hr>
                 <h2 class="apresentacao__conteudo__titulo">Contato</h2>
                 <ul class="apresentacao__conteudo__texto">
-                    <li> WhatsApp: 11993910804</li>
+                    <li><a href="tel:+5511993910804">+55 (11)99391-0804</a></li>
                     <br>
                     <li><a href="https://www.linkedin.com/in/fabriciomagoga" target="_blank">Linkedin</a></li>
+                    <br>
+                    <li><a href="https://www.github.com/magoga-br" target="_blank">Github</a></li>
+                    <br>
+                    <li><a href="mailto:contato.fabriciomagoga@gmail.com"
+                            target="_blank">contato.fabriciomagoga@gmail.com</a></li>
                 </ul>
                 <hr>
                 <h2 class="apresentacao__conteudo__titulo">Educação</h2>
@@ -67,9 +82,14 @@
                             href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">com
                             certificado</a> </li>
                     <br>
-                    
+
                     <li>Comunicação - Nivelamento FIAP <a
                             href="https://on.fiap.com.br/local/nivelamento/gerar_certificado.php?chave=35a79a49adbf428b1d34ed19b27b1c6c&action=view">com
+                            certificado</a> </li>
+                    <br>
+                    
+                    <li>Excel Básico - SENAI Jundiaí <a
+                            href="https://www.sp.senai.br/consulta-certificado?qrcode=00035441/8058397">com
                             certificado</a> </li>
                     <br>
                 </ul>
