ajusta formatação e adiciona novos certificados na seção de educação

--- a/curriculo.html
+++ b/curriculo.html
@@ -61,35 +61,47 @@
                 <h2 class="apresentacao__conteudo__titulo">Certificados relevantes</h2>
                 <ul class="apresentacao__conteudo__texto">
 
-                    <li>Formação A partir do zero: iniciante em programação - Alura Cursos <a
-                            href="https://cursos.alura.com.br/degree/certificate/d4b92500-603f-4540-a0d0-c1a5ca9cf23f?lang">com
-                            certificado</a> </li>
+                    <li>Formação A partir do zero: iniciante em programação - Alura Cursos |<a
+                            href="https://cursos.alura.com.br/degree/certificate/d4b92500-603f-4540-a0d0-c1a5ca9cf23f?lang">
+                            com
+                            certificado </a> </li>
                     <br>
                     <li>
-                        Learn to Program - NanoCourse FIAP <a
-                            href="https://on.fiap.com.br/local/nanocourses/gerar_certificado.php?chave=8fb5e9abf37682221f4908d57e1a9c3f&action=view">com
+                        Formação A partir do zero: HTML e CSS para projetos web - Alura Cursos |<a
+                            href="https://cursos.alura.com.br/degree/certificate/6b2a0ea6-98a4-45f8-a794-11b7d898faa8?lang">
+                            com
+                            certificado </a> </li>
+                    <br>
+                    <li>
+                        Learn to Program - NanoCourse FIAP |<a
+                            href="https://on.fiap.com.br/local/nanocourses/gerar_certificado.php?chave=8fb5e9abf37682221f4908d57e1a9c3f&action=view">
+                            com
                             certificado</a> </li>
                     <br>
-                    <li>Matemática - Nivelamento FIAP <a
-                            href="https://on.fiap.com.br/pluginfile.php/1/local_nivelamento/certificado_nivelamento/1972/7a33ac8f85f52e74ede343240d882865/certificado.png">com
+                    <li>Matemática - Nivelamento FIAP |<a
+                            href="https://on.fiap.com.br/pluginfile.php/1/local_nivelamento/certificado_nivelamento/1972/7a33ac8f85f52e74ede343240d882865/certificado.png">
+                            com
                             certificado</a> </li>
                     <br>
-                    <li>Lógica de programação - Nivelamento FIAP <a
-                            href="https://on.fiap.com.br/pluginfile.php/1/local_nivelamento/certificado_nivelamento/1978/bf2de083d17de4fc9cb90afda56f282b/certificado.png">com
+                    <li>Lógica de programação - Nivelamento FIAP |<a
+                            href="https://on.fiap.com.br/pluginfile.php/1/local_nivelamento/certificado_nivelamento/1978/bf2de083d17de4fc9cb90afda56f282b/certificado.png">
+                            com
                             certificado</a> </li>
                     <br>
-                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura Cursos <a
-                            href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">com
+                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura Cursos |<a
+                            href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">
+                            com
                             certificado</a> </li>
                     <br>
 
-                    <li>Comunicação - Nivelamento FIAP <a
-                            href="https://on.fiap.com.br/local/nivelamento/gerar_certificado.php?chave=35a79a49adbf428b1d34ed19b27b1c6c&action=view">com
+                    <li>Comunicação - Nivelamento FIAP |<a
+                            href="https://on.fiap.com.br/local/nivelamento/gerar_certificado.php?chave=35a79a49adbf428b1d34ed19b27b1c6c&action=view">
+                            com
                             certificado</a> </li>
                     <br>
-                    
-                    <li>Excel Básico - SENAI Jundiaí <a
-                            href="https://www.sp.senai.br/consulta-certificado?qrcode=00035441/8058397">com
+
+                    <li>Excel Básico - SENAI Jundiaí |<a
+                            href="https://www.sp.senai.br/consulta-certificado?qrcode=00035441/8058397"> com
                             certificado</a> </li>
                     <br>
                 </ul>
