--- a/curriculo.html
+++ b/curriculo.html
@@ -24,17 +24,16 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <img class="apresentacao__conteudo__titulo"
-                src="https://readme-typing-svg.demolab.com?font=Monocraft&pause=2000&color=F0F6FC&width=150&height=40&lines=Currículo"
-                alt="Typing SVG" /></a>
-            </div>
+            <h1 class="apresentacao__conteudo__titulo">
+                Currículo
+            </h1>
             <hr>
             <div class="informacoes">
 
                 <p class="apresentacao__conteudo__texto">
-                    Olá, meu nome é Fabrício Alves Magoga, sou Full-stack Developer. Atualmente estou estudando
-                    Engenharia de Software na FIAP. Sou uma pessoa que ama o que faz e ama aprender cada vez mais sobre
-                    tecnologia.
+                    Olá, meu nome é Fabrício Alves Magoga, Sou técnico em informática, estudante de Engenharia de
+                    Software e uma pessoa que gosta de estudar tecnologia até entender como funciona por
+                    completo, gosto de saber como as coisas funcionam de verdade por baixo dos panos.
                     <hr>
                 <h2 class="apresentacao__conteudo__titulo">Contato</h2>
                 <ul class="apresentacao__conteudo__texto">
