Adiciona a tela de projetos e alterações para melhor experiência. formata textos para melhor leitura usando a tag strong, altera informações no currículo e no sobre

--- a/about.html
+++ b/about.html
@@ -6,32 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
-    <title>Sobre mim</title>
+    <title>Sobre</title>
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__links" href="index.html">Home</a>
-            <a class="cabecalho__menu__links" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__links" href="curriculo.html">Currículo</a>
+            <a class="cabecalho__menu__links" href="/">Home</a>
+            <a class="cabecalho__menu__links active" href="about">Sobre</a>
+            <a class="cabecalho__menu__links" href="curriculo">Currículo</a>
+            <a class="cabecalho__menu__links" href="projetos">Projetos</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <h1 class="apresentacao__conteudo__titulo">SOBRE MIM</h1>
             <p class="apresentacao__conteudo__texto">
-                Olá, eu me chamo Fabrício Alves Magoga, sou desenvolvedor, apaixonado por tecnologia e programação.
+                Olá, meu nome é <strong>Fabrício Alves Magoga</strong>, Sou Técnico em informática e Estudante de
+                Engenharia de Software
             </p>
             <p class="apresentacao__conteudo__texto">
-                Iniciei meus estudos em programação com o ensino médio integrado ao técnico em informática e,
-                atualmente, estou estudando Engenharia de Software na FIAP, além de fazer cursos complementares para um maior aprendizado na área e fora dela.
+                Iniciei meus estudos na área de tecnologia durante meu <strong>Ensino Médio integrado ao Técnico em
+                    Informática</strong> e,
+                atualmente, estou estudando <strong>Engenharia de Software</strong>, além de aprender cada vez mais
+                todos os dias através de <strong>Cursos e Formações</strong> extracurriculares, ou apenas por
+                <i><strong>curiosidade</strong></i>.
             </p>
             <p class="apresentacao__conteudo__texto">
-                Sou uma pessoa que ama o que faz e ama aprender cada vez mais sobre tecnologia.
+                Sou uma pessoa que gosta de estudar tecnologia até entender como ela <strong>funciona por
+                    completo</strong>, gosto de saber como as coisas funcionam de verdade por <strong><i>baixo dos
+                        panos</i></strong>.
         </section>
         <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga">
     </main>
