--- a/curriculo.html
+++ b/curriculo.html
@@ -17,66 +17,51 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__links" href="index.html">Home</a>
-            <a class="cabecalho__menu__links" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__links" href="curriculo.html">Currículo</a>
+            <a class="cabecalho__menu__links" href="/">Home</a>
+            <a class="cabecalho__menu__links" href="about">Sobre</a>
+            <a class="cabecalho__menu__links active" href="curriculo">Currículo</a>
+            <a class="cabecalho__menu__links" href="projetos">Projetos</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">
-                Currículo
+                CURRÍCULO
             </h1>
-            <hr>
             <div class="informacoes">
-
+                <h2 class="apresentacao__conteudo__titulo">
+                    Resumo
+                </h2>
                 <p class="apresentacao__conteudo__texto">
-                    Olá, meu nome é Fabrício Alves Magoga, Sou técnico em informática, estudante de Engenharia de
-                    Software e uma pessoa que gosta de estudar tecnologia até entender como funciona por
-                    completo, gosto de saber como as coisas funcionam de verdade por baixo dos panos.
-                    <hr>
+                    Olá, meu nome é <strong><i>Fabrício Alves Magoga</i></strong>, Sou <strong><i>Técnico em
+                            informática</i></strong> e Estudante de <strong><i>Engenharia de Software</i></strong>.
+                </p>
+                <hr>
                 <h2 class="apresentacao__conteudo__titulo">Contato</h2>
                 <ul class="apresentacao__conteudo__texto">
-                    <li><a href="tel:+5511993910804">+55 (11)99391-0804</a></li>
-                    <br>
-                    <li><a href="https://www.linkedin.com/in/fabriciomagoga" target="_blank">Linkedin</a></li>
-                    <br>
-                    <li><a href="https://www.github.com/magoga-br" target="_blank">Github</a></li>
-                    <br>
-                    <li><a href="mailto:contato.fabriciomagoga@gmail.com"
-                            target="_blank">contato.fabriciomagoga@gmail.com</a></li>
+                    <li>Telefone/Whatsapp: <a href="tel:+5511993910804" rel="noopener noreferrer">+55 (11)99391-0804</a>
+                    </li>
+                    <li>Linkedin: <a href="https://www.linkedin.com/in/fabriciomagoga" target="_blank"
+                            rel="noopener noreferrer">linkedin.com/in/fabriciomagoga</a></li>
+                    <li>Github: <a href="https://www.github.com/magoga-br" target="_blank"
+                            rel="noopener noreferrer">github.com/magoga-br</a></li>
+                    <li>Email: <a href="mailto:contato.fabriciomagoga@gmail.com" target="_blank"
+                            rel="noopener noreferrer">contato.fabriciomagoga@gmail.com</a></li>
                 </ul>
                 <hr>
                 <h2 class="apresentacao__conteudo__titulo">Educação</h2>
-                <ul class="apresentacao__conteudo__texto">
-                    <li>(2025-2028) Bacharelado em Engenharia de Software, FIAP - São Paulo, SP</li>
+                <div class="apresentacao__conteudo__texto">
+                    <p><strong>Engenharia de Software</strong><br>
+                        FIAP, São Paulo/SP (2025-2028)</p>
                     <br>
-                    <li>(2022-2024) Ensino Médio Integrado ao Técnico de Informática, Escolas Padre Anchieta, Jundiaí,
-                        SP
-                    </li>
-                </ul>
+                    <p><strong>Ensino Médio + Técnico em Informática</strong><br>
+                        Escolas Padre Anchieta, Jundiaí/SP (2022-2024)</p>
+                </div>
 
                 <hr>
                 <h2 class="apresentacao__conteudo__titulo">Certificados relevantes</h2>
                 <ul class="apresentacao__conteudo__texto">
 
-                    <li>Formação A partir do zero: iniciante em programação - Alura Cursos |<a
-                            href="https://cursos.alura.com.br/degree/certificate/d4b92500-603f-4540-a0d0-c1a5ca9cf23f?lang">
-                            com
-                            certificado </a> </li>
-                    <br>
-                    <li>
-                        Formação A partir do zero: HTML e CSS para projetos web - Alura Cursos |<a
-                            href="https://cursos.alura.com.br/degree/certificate/6b2a0ea6-98a4-45f8-a794-11b7d898faa8?lang">
-                            com
-                            certificado </a> </li>
-                    <br>
-                    <li>
-                        Learn to Program - NanoCourse FIAP |<a
-                            href="https://on.fiap.com.br/local/nanocourses/gerar_certificado.php?chave=8fb5e9abf37682221f4908d57e1a9c3f&action=view">
-                            com
-                            certificado</a> </li>
-                    <br>
                     <li>Matemática - Nivelamento FIAP |<a
                             href="https://on.fiap.com.br/pluginfile.php/1/local_nivelamento/certificado_nivelamento/1972/7a33ac8f85f52e74ede343240d882865/certificado.png">
                             com
@@ -87,19 +72,35 @@
                             com
                             certificado</a> </li>
                     <br>
-                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura Cursos |<a
-                            href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">
-                            com
-                            certificado</a> </li>
-                    <br>
 
                     <li>Comunicação - Nivelamento FIAP |<a
                             href="https://on.fiap.com.br/local/nivelamento/gerar_certificado.php?chave=35a79a49adbf428b1d34ed19b27b1c6c&action=view">
                             com
                             certificado</a> </li>
                     <br>
-
-                    <li>Excel Básico - SENAI Jundiaí |<a
+                    <li>
+                        Learn to Program - NanoCourse FIAP |<a
+                            href="https://on.fiap.com.br/local/nanocourses/gerar_certificado.php?chave=8fb5e9abf37682221f4908d57e1a9c3f&action=view">
+                            com
+                            certificado</a> </li>
+                    <br>
+                    <li>Formação A partir do zero: iniciante em programação - Alura |<a
+                            href="https://cursos.alura.com.br/degree/certificate/d4b92500-603f-4540-a0d0-c1a5ca9cf23f?lang">
+                            com
+                            certificado </a> </li>
+                    <br>
+                    <li>
+                        Formação A partir do zero: HTML e CSS para projetos web - Alura |<a
+                            href="https://cursos.alura.com.br/degree/certificate/6b2a0ea6-98a4-45f8-a794-11b7d898faa8?lang">
+                            com
+                            certificado </a> </li>
+                    <br>
+                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura |<a
+                            href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">
+                            com
+                            certificado</a> </li>
+                    <br>
+                    <li>Excel Básico - SENAI |<a
                             href="https://www.sp.senai.br/consulta-certificado?qrcode=00035441/8058397"> com
                             certificado</a> </li>
                     <br>
@@ -107,20 +108,25 @@
                 <hr>
                 <h2 class="apresentacao__conteudo__titulo">Idiomas</h2>
                 <ul class="apresentacao__conteudo__texto">
-                    <li>Português Nativo</li>
-                    <br>
-                    <li>Inglês Avançado</li>
-                    <br>
-                    <li>Espanhol Intermediário</li>
+                    <li>Português, Nativo.</li>
+                    <li>Inglês, Intermediário Superior.</li>
+                    <li>Espanhol, Básico.</li>
                 </ul>
                 <hr>
-                <h2 class="apresentacao__conteudo__titulo">Habilidades interpessoais</h2>
+                <h2 class="apresentacao__conteudo__titulo">Skills</h2>
                 <ul class="apresentacao__conteudo__texto">
-                    <li>Rápido aprendizado</li>
+                    <li>Excelentes habilidades <strong>lógicas</strong>, <strong>organizacionais</strong>, multitarefas
+                        e de<strong>
+                            resolução de problemas.</strong> </li>
                     <br>
-                    <li>Raciocinio lógico</li>
+                    <li>Conhecimentos Básicos do <strong>Microsoft Office</strong> ou semelhantes (Word, Excel,
+                        PowerPoint). </li>
                     <br>
-                    <li>Resolução de problemas</li>
+                    <li>Confortável trabalhando nas linguagens <strong>(incluindo, mas não se limitando a)</strong>:
+                        Javascript &
+                        Node.js, HTML/CSS, Python e C#.</li>
+                    <br>
+                    <li>Conhecimentos em <strong>Redes de computadores</strong> e <strong>Hardware</strong>.</li>
                 </ul>
             </div>
         </section>
