--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Portifolio</title>
 </head>
@@ -15,28 +17,31 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__links" href="index.html">Home</a>
-            <a class="cabecalho__menu__links" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__links" href="curriculo.html">Currículo</a>
+            <a class="cabecalho__menu__links active" href="/">Home</a>
+            <a class="cabecalho__menu__links" href="about">Sobre</a>
+            <a class="cabecalho__menu__links" href="curriculo">Currículo</a>
+            <a class="cabecalho__menu__links" href="projetos">Projetos</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong
-                    class="titulo-destaque">com um Front-end de qualidade!
+                    class="titulo-destaque">com um <span class="titulo-destaque__span">Software</span> de qualidade!
                 </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Fabrício Magoga, desenvolvedor
-                Full-stack com especialidade em JavaScript, HTML e
-                CSS. Ajudo negócios e designers a
-                colocarem em prática boas ideias. Vamos
-                conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá, eu sou <strong>Fabrício Alves Magoga</strong>, sou
+                <strong>Técnico em
+                    informática</strong>, estudante de Engenharia de
+                Software, e <strong><i>Desenvolvedor Full-Stack</i></strong>.
+            </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fabriciomagoga" target="_blank">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fabriciomagoga" target="_blank"
+                    rel="noopener noreferrer">
                     <img src="./assets/linkedin.png" alt="">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://github.com/magoga-br" target="_blank">
+                <a class="apresentacao__links__navegacao" href="https://github.com/magoga-br" target="_blank"
+                    rel="noopener noreferrer">
                     <img src="./assets/github.png" alt="">
                     GitHub
                 </a>
