adiciona botão de baixar curriculo pdf

--- a/curriculo.html
+++ b/curriculo.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfólio de Fabrício Magoga - Desenvolvedor Full Stack">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://portifolio-magoga.vercel.app">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,6 +31,8 @@
             <h1 class="apresentacao__conteudo__titulo">
                 CURRÍCULO
             </h1>
+            <a href="./assets/CV_FABRICIO_ALVES_MAGOGA.pdf" download="CV_FABRICIO_ALVES_MAGOGA.pdf"
+                class="baixarpdf">Baixar PDF</a>
             <div class="informacoes">
                 <h2 class="apresentacao__conteudo__titulo">
                     Resumo
@@ -84,18 +89,18 @@
                             com
                             certificado</a> </li>
                     <br>
-                    <li>Formação A partir do zero: iniciante em programação - Alura |<a
+                    <li>Formação A partir do zero: iniciante em programação - Alura CursosCursos |<a
                             href="https://cursos.alura.com.br/degree/certificate/d4b92500-603f-4540-a0d0-c1a5ca9cf23f?lang">
                             com
                             certificado </a> </li>
                     <br>
                     <li>
-                        Formação A partir do zero: HTML e CSS para projetos web - Alura |<a
+                        Formação A partir do zero: HTML e CSS para projetos web - Alura Cursos|<a
                             href="https://cursos.alura.com.br/degree/certificate/6b2a0ea6-98a4-45f8-a794-11b7d898faa8?lang">
                             com
                             certificado </a> </li>
                     <br>
-                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura |<a
+                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura Cursos|<a
                             href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">
                             com
                             certificado</a> </li>
@@ -129,8 +134,11 @@
                     <li>Conhecimentos em <strong>Redes de computadores</strong> e <strong>Hardware</strong>.</li>
                 </ul>
             </div>
+            <a href="./assets/CV_FABRICIO_ALVES_MAGOGA.pdf" download="CV_FABRICIO_ALVES_MAGOGA.pdf"
+                class="baixarpdf">Baixar PDF</a>
         </section>
-        <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga">
+        <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga" loading="lazy">
+
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Fabrício Magoga</p>
