--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfólio de Fabrício Magoga - Desenvolvedor Full Stack">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://portifolio-magoga.vercel.app">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -42,7 +45,7 @@
                     completo</strong>, gosto de saber como as coisas funcionam de verdade por <strong><i>baixo dos
                         panos</i></strong>.
         </section>
-        <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga">
+        <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga" loading="lazy">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Fabrício Magoga</p>
