--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfólio de Fabrício Magoga - Desenvolvedor Full Stack">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://portifolio-magoga.vercel.app">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -37,17 +40,17 @@
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fabriciomagoga" target="_blank"
                     rel="noopener noreferrer">
-                    <img src="./assets/linkedin.png" alt="">
+                    <img src="./assets/linkedin.png" alt="Logo do Linkedin" loading="lazy">
                     Linkedin
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://github.com/magoga-br" target="_blank"
                     rel="noopener noreferrer">
-                    <img src="./assets/github.png" alt="">
+                    <img src="./assets/github.png" alt="Logo do Github" loading="lazy">
                     GitHub
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga">
+        <img class="apresentacao__imagem" src="/assets/img.jpg" alt="Foto de Fabrício Magoga" loading="lazy">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Fabrício Magoga</p>
