--- a/projetos.html
+++ b/projetos.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfólio de Fabrício Magoga - Desenvolvedor Full Stack">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://portifolio-magoga.vercel.app">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -23,7 +26,7 @@
             <a class="cabecalho__menu__links active" href="projetos">Projetos</a>
         </nav>
     </header>
-    <main class="apresentacao apresentacao-projetos">
+    <main class="apresentacao-projetos">
         <h1 class="apresentacao__conteudo__titulo apresentacao-projetos__titulo">
             PROJETOS
         </h1>
