atualiza frase titulo da home

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio a outro nível <strong
                     class="titulo-destaque">com um <span class="titulo-destaque__span">Software</span> de qualidade!
                 </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá, eu sou <strong>Fabrício Alves Magoga</strong>, sou
+            <p class="apresentacao__conteudo__texto">Olá, meu nome é <strong>Fabrício Alves Magoga</strong>, sou
                 <strong>Técnico em
                     informática</strong>, estudante de Engenharia de
                 Software, e <strong><i>Desenvolvedor Full-Stack</i></strong>.
