--- a/curriculo.html
+++ b/curriculo.html
@@ -89,18 +89,18 @@
                             com
                             certificado</a> </li>
                     <br>
-                    <li>Formação A partir do zero: iniciante em programação - Alura CursosCursos |<a
+                    <li>Formação A partir do zero: iniciante em programação - Alura Cursos |<a
                             href="https://cursos.alura.com.br/degree/certificate/d4b92500-603f-4540-a0d0-c1a5ca9cf23f?lang">
                             com
                             certificado </a> </li>
                     <br>
                     <li>
-                        Formação A partir do zero: HTML e CSS para projetos web - Alura Cursos|<a
+                        Formação A partir do zero: HTML e CSS para projetos web - Alura Cursos |<a
                             href="https://cursos.alura.com.br/degree/certificate/6b2a0ea6-98a4-45f8-a794-11b7d898faa8?lang">
                             com
                             certificado </a> </li>
                     <br>
-                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura Cursos|<a
+                    <li>Git e GitHub: compartilhando e colaborando em projetos - Alura Cursos |<a
                             href="https://cursos.alura.com.br/certificate/53e5cd6a-c5fd-47e7-8649-6efdeeb2b0bf?lang">
                             com
                             certificado</a> </li>
