add getsafe and feira projects

--- a/projetos.html
+++ b/projetos.html
@@ -127,6 +127,40 @@
             </div>
             <div class="projetos__conteudo__box">
                 <h2 class="box-title">
+                    Global Solution - GetSafe
+                </h2>
+                <a class="box-image">
+                    <img src="./assets/gs1.png" alt="Preview do Projeto GetSafe">
+                </a>
+                <p class="box-text">
+                    GetSafe é uma plataforma online que conecta pessoas em risco durante desastres naturais a
+                    voluntários e órgãos oficiais, agilizando o socorro e a ajuda humanitária.
+                </p>
+                <div class="box-buttons">
+                    <a href="https://github.com/magoga-br/GS1"><img src="./assets/github.png"
+                            alt="Acesse o Repositório no Github"></a>
+                    <a href="https://gs1-getsafe.vercel.app/" rel="noopener noreferrer" target="_blank">NO AR</a>
+                </div>
+            </div>
+            <div class="projetos__conteudo__box">
+                <h2 class="box-title">
+                    Agrotech - Feira
+                </h2>
+                <a class="box-image">
+                    <img src="./assets/feira.png" alt="Preview do Projeto Feira">
+                </a>
+                <p class="box-text">
+                    Este projeto é uma plataforma web para conectar produtores rurais e consumidores, permitindo a
+                    compra e venda de alimentos frescos e orgânicos diretamente do campo para a mesa.
+                </p>
+                <div class="box-buttons">
+                    <a href="https://github.com/magoga-br/Feira"><img src="./assets/github.png"
+                            alt="Acesse o Repositório no Github"></a>
+                    <a href="https://feira-agrotech.vercel.app/" rel="noopener noreferrer" target="_blank">NO AR</a>
+                </div>
+            </div>
+            <div class="projetos__conteudo__box">
+                <h2 class="box-title">
                     Portifólio
                 </h2>
                 <a class="box-image">
